--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,17 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">= 3.11, < 3.13"
 mypy = "^1.6.1"
 pylint = "^3.0.2"
+jupyter = "^1.0.0"
+ucimlrepo = "^0.0.3"
+missingno = "^0.5.2"
+scikit-learn = "^1.3.2"
+seaborn = "^0.13.0"
+matplotlib = "^3.8.1"
+numpy = "^1.26.1"
+pandas = "^2.1.2"
 
 
 [build-system]
