--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "bank-marketing-e2e-model"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Creating a model from data in an SQL DB to UI predict the deposit term subscribers from bank marketing efforts."
+authors = ["Haydn Martin"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -22,6 +22,7 @@ pyyaml = "^6.0.1"
 joblib = "^1.3.2"
 streamlit = "^1.28.2"
 selenium = "^4.15.2"
+pandas-stubs = "^2.1.1.230928"
 
 
 [build-system]
